--- a/index.html
+++ b/index.html
@@ -13,4 +13,11 @@
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
+<script src="https://buzz-main-d3g0.onrender.com/copilot/index.js"></script>
+<script>
+  window.mountChainlitWidget({
+    chainlitServer: "https://buzz-main-d3g0.onrender.com/",
+  });
+</script>
+
 </html>
